# bird-detector

./: .gitignore  MANIFEST.in  README.md  __init__.py  model.py  pyproject.toml  requirements.txt  scores.py  utils.py
autoencoder/: __init__.py  convolution.py  fully_connected.py  interactive_utils.py  otsu_method.py  plot_utils.py  scores.py  torch_utils.py  train.py
data/: __init__.py  data_loaders.py  image_utils.py  preprocessing_pipelines.py  raw_image_utils.py
detectors/: __init__.py  anomaly_detector.py  convae_detector.py  opencv_detector.py  simple_detector.py
tests/: __init__.py  test_autoencoder.py
utils/: color_transforms.py  mlflow_utils.py
